# tjr102

./: README.md  gcloud-create-airflow-vm.sh
airflow-demo/dags/: d_01_example_dag.py  d_05_example_pass_parameters_decorator.py  d_06_example_pass_parameters_cli.py  d_10_example_import_tasks.py
data-pipeline/: .gitignore  01_dataframe.ipynb  02_ptt_gossiping.ipynb  03_summary.ipynb  04_transformation.ipynb  05_nan.ipynb  06_read_typing.ipynb  07_join.ipynb  08_melt.ipynb  09_partition_by_row.ipynb  10_pandasql.ipynb  11_pymysql.ipynb  12_pymysql_executemany.ipynb  13_pandas_read_sql.ipynb  14_pandas_rolling.ipynb  df.json  df_columns.json  df_index.json  df_records.json  df_records.jsonl  df_split.json  df_table.json  ptt.csv  ptt_no_col.csv  pyproject.toml
demo-devcontainer/: Pipfile
demo-devcontainer/.devcontainer/: devcontainer.json
docker/: docker-compose.yml
flask-demo/: app.py  pyproject.toml  test_request.ipynb
gcp/: bigquery-practice.ipynb  bigquery_practice.ipynb  pygheets_practice.ipynb  pyproject.toml  sale.csv  secret_manager_practice.ipynb
gemini-api/: pyproject.toml  sample.py  test.py
interview/02/: README.md
interview/03/: sql_test.md
note/: 20250629.md  20250703_afternoon_datapipeline.md  20250703_morning_docker.md  20250703_night_datapipeline.md  20250712_afternoon_datapipeline.md  20250712_morning_datapipeline.md  20250719_afternoon_datapipeline.md  20250720_afternoon_GCP.md  20250720_morning_datapipeline.md  20250803_afternoon_gcp.md  20250803_morning_gcp.md
selenium-demo/: pyproject.toml  selenium-demo.py
(+14 files in other folders)
