[project]
name = "gcp"
version = "0.1.0"
description = ""
authors = [
    {name = "uuboyscy",email = "aegis12321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

